fix status text overflow in ViewProfile (#3517)
closes #3515

--- a/scss/dialogs/_view_profile.scss
+++ b/scss/dialogs/_view_profile.scss
@@ -33,7 +33,7 @@ div.profile-info-container {
 .status-text {
   padding: 15px 15px;
   color: var(--globalText);
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .mutual-chats {
